tests/invalid/MethodCall_Invalid_3.whiley
public export method test(int[] _this) :
    _this.f(1)
